Bug 1325591 - Hide overlay and clickToPlay of video in Windows high contrast theme. r=Gijs,mikedeboer
MozReview-Commit-ID: ARxnSMQ32el

UltraBlame original commit: 260f2ff492af63886d096fcd44c2b23d4949c739

--- a/toolkit/themes/shared/media/videocontrols.css
+++ b/toolkit/themes/shared/media/videocontrols.css
@@ -2787,3 +2787,35 @@ display
 inline
 ;
 }
+%
+ifdef
+XP_WIN
+media
+(
+-
+moz
+-
+windows
+-
+default
+-
+theme
+:
+0
+)
+{
+.
+controlsSpacer
+.
+clickToPlay
+{
+background
+-
+color
+:
+transparent
+;
+}
+}
+%
+endif
